force-app/main/default/objects/Program__c/fields/Characteristics_Willing_To_Accept__c.field-meta.xml
<CustomField>
    <fullName>Characteristics_Willing_To_Accept__c</fullName>
    <label>Characteristics Willing To Accept</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aggression-cruely to animals</fullName>
            </value>
            <value>
                <fullName>Aggression-Physical to adults</fullName>
            </value>
            <value>
                <fullName>Aggression-Physical to peers</fullName>
            </value>
            <value>
                <fullName>Aggression-Physical to staff</fullName>
            </value>
            <value>
                <fullName>Aggression-property destruction</fullName>
            </value>
            <value>
                <fullName>Aggression-verbal to adults</fullName>
            </value>
            <value>
                <fullName>Aggression-verbal to peers</fullName>
            </value>
            <value>
                <fullName>Anixety-obsessions/complusions</fullName>
            </value>
            <value>
                <fullName>Anxiety-overnxious</fullName>
            </value>
            <value>
                <fullName>Anxiety-panic attacks</fullName>
            </value>
            <value>
                <fullName>Anxiety-sepration anxiety</fullName>
            </value>
            <value>
                <fullName>Asthma(Controlled)</fullName>
            </value>
            <value>
                <fullName>Asthma(Not Controlled)</fullName>
            </value>
            <value>
                <fullName>Attention deficit disorder</fullName>
            </value>
            <value>
                <fullName>Auto theft</fullName>
            </value>
            <value>
                <fullName>Auto theft-chronic</fullName>
            </value>
            <value>
                <fullName>Bordline thru normal intelligence</fullName>
            </value>
            <value>
                <fullName>Affective disorder</fullName>
            </value>
            <value>
                <fullName>Ambulation impaired (i.e. Wheelchair needs)</fullName>
            </value>
            <value>
                <fullName>Conduct disorder</fullName>
            </value>
            <value>
                <fullName>Crime against person (assault or robbery)</fullName>
            </value>
            <value>
                <fullName>Cult involvement</fullName>
            </value>
            <value>
                <fullName>Current lisa l class</fullName>
            </value>
            <value>
                <fullName>Defiant/non-compliant/oppositional</fullName>
            </value>
            <value>
                <fullName>Depression (by history)</fullName>
            </value>
            <value>
                <fullName>Depression (current)</fullName>
            </value>
            <value>
                <fullName>Diabetes (controlled)</fullName>
            </value>
            <value>
                <fullName>Diabetes (not controlled)</fullName>
            </value>
            <value>
                <fullName>Drug dealer</fullName>
            </value>
            <value>
                <fullName>Dual diagnosis (mentally ill &amp; drug addiction)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>