force-app/main/default/objects/Program__c/fields/Child_Specific_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Child_Specific_Agreement__c</fullName>
    <label>Child Specific Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Child of a Minor Parent</fullName>
            </value>
            <value>
                <fullName>Co-committed child (partial cost)</fullName>
            </value>
            <value>
                <fullName>Committed baby</fullName>
            </value>
            <value>
                <fullName>Out of State non-MA</fullName>
            </value>
            <value>
                <fullName>Out of State placement with no DHR contract</fullName>
            </value>
            <value>
                <fullName>Pre-Adoption</fullName>
            </value>
            <value>
                <fullName>Private Non-TFC Sibling</fullName>
            </value>
            <value>
                <fullName>Residential with On Campus Education</fullName>
            </value>
            <value>
                <fullName>Special</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>