force-app/main/default/objects/Program__c/fields/Contracted_Beds__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Beds__c</fullName>
    <label>Contracted Beds</label>
    <length>100</length>
    <type>Text</type>
</CustomField>