force-app/main/default/objects/Program__c/fields/Current_Placements__c.field-meta.xml
<CustomField>
    <fullName>Current_Placements__c</fullName>
    <label>Current Placements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>