force-app/main/default/objects/Program__c/fields/Effictive_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Effictive_Start_Date__c</fullName>
    <label>Effictive Start Date</label>
    <type>Date</type>
</CustomField>