force-app/main/default/objects/Program__c/fields/Licensing_Agency__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Agency__c</fullName>
    <label>Licensing Agency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>