force-app/main/default/objects/Program__c/fields/MD_Chessie_Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>MD_Chessie_Provider_Id__c</fullName>
    <formula>Provider__r.Casevault_ProID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MD Chessie Provider Id</label>
    <type>Text</type>
</CustomField>