force-app/main/default/objects/Program__c/fields/Placement_Structure__c.field-meta.xml
<CustomField>
    <fullName>Placement_Structure__c</fullName>
    <label>Placement Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>503_Guardianship Assistance Program</fullName>
            </value>
            <value>
                <fullName>1303_Emergency Shelter (Agency)</fullName>
            </value>
            <value>
                <fullName>1_Independent Living Residential Program</fullName>
            </value>
            <value>
                <fullName>8_Formal Kinship Care</fullName>
            </value>
            <value>
                <fullName>9_Restricted (Relative) Foster Care</fullName>
            </value>
            <value>
                <fullName>10_Regular Foster Care</fullName>
            </value>
            <value>
                <fullName>11_Intermediate Foster Care</fullName>
            </value>
            <value>
                <fullName>12_Treatment Foster Care</fullName>
            </value>
            <value>
                <fullName>13_Emergency Foster Home Care</fullName>
            </value>
            <value>
                <fullName>14_Residential Group Homes</fullName>
            </value>
            <value>
                <fullName>15_Emergency Group Shelter Care</fullName>
            </value>
            <value>
                <fullName>71_Emergency Foster Care Retainer</fullName>
            </value>
            <value>
                <fullName>73_After care room and board</fullName>
            </value>
            <value>
                <fullName>74_Alternative Living Units</fullName>
            </value>
            <value>
                <fullName>75_Teen Mother Programs</fullName>
            </value>
            <value>
                <fullName>76_Residential Treatment Centers</fullName>
            </value>
            <value>
                <fullName>77_Refugee Child</fullName>
            </value>
            <value>
                <fullName>167_Therapeutic Group Homes</fullName>
            </value>
            <value>
                <fullName>501_Adoptive Home</fullName>
            </value>
            <value>
                <fullName>500_Pre-Finalized Adoptive Home</fullName>
            </value>
            <value>
                <fullName>11405_Treatment Foster Care Level 1</fullName>
            </value>
            <value>
                <fullName>11406_Treatment Foster Care Level 2</fullName>
            </value>
            <value>
                <fullName>11407_Treatment Foster Care Level 3</fullName>
            </value>
            <value>
                <fullName>11408_Treatment Foster Care Level 4</fullName>
            </value>
            <value>
                <fullName>11409_Intermediate Foster Care Difficulty of Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>