force-app/main/default/objects/Program__c/fields/Preferred_Non_preferred__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Non_preferred__c</fullName>
    <label>Preferred/Non preferred</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>Non preferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>