force-app/main/default/objects/Program__c/fields/Program_Id__c.field-meta.xml
<CustomField>
    <fullName>Program_Id__c</fullName>
    <label>Program Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>