force-app/main/default/objects/Program__c/fields/Structure_Service__c.field-meta.xml
<CustomField>
    <fullName>Structure_Service__c</fullName>
    <label>Structure/Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1305_Child Care- Formal (Paid)</fullName>
            </value>
            <value>
                <fullName>1306_Child Care- Informal (Paid)</fullName>
            </value>
            <value>
                <fullName>11415_Annual Credit Report (Agency)</fullName>
            </value>
            <value>
                <fullName>11537_Infant&amp;ToddlersPrgms(4-5)-EBP-Medicaid(Non-Paid)</fullName>
            </value>
            <value>
                <fullName>11538_Infant&amp;ToddlersPrgms(4-5)-EBP-PrivateIns(Non-Paid)</fullName>
            </value>
            <value>
                <fullName>11539_Infant&amp;ToddlersPrgms(4-5)-EBP-Other Fund(Non-Paid)</fullName>
            </value>
            <value>
                <fullName>11540_Initial Life Skills Asmt-EBP-Medicaid(Non-Paid)</fullName>
            </value>
            <value>
                <fullName>11541_Initial Life Skills Asmt-EBP-Private Ins(Non-Paid)</fullName>
            </value>
            <value>
                <fullName>11542_Initial Life Skills Asmt-EBP-Other Fund(Non-Paid)</fullName>
            </value>
            <value>
                <fullName>11543_Life Skills Instrctn-Group-EBP-Medicaid(Non-Paid)</fullName>
            </value>
            <value>
                <fullName>11544_Life Skills Instrctn-Group-EBP-Prvt Ins(Non-Paid)</fullName>
            </value>
            <value>
                <fullName>11545_Life Skills Instrctn-Group-EBP-OtherFund(Non-Paid)</fullName>
            </value>
            <value>
                <fullName>11546_Life Skills Instrctn-Ind-EBP-Medicaid(Non-Paid)</fullName>
            </value>
            <value>
                <fullName>11547_Life Skills Instrctn-Ind-EBP-Private Ins(Non-Paid)</fullName>
            </value>
            <value>
                <fullName>11548_Life Skills Instrctn-Ind-EBP-Other Fund(Non-Paid)</fullName>
            </value>
            <value>
                <fullName>11549_Parenting Skills-EBP-Medicaid  (Non-Paid)</fullName>
            </value>
            <value>
                <fullName>11550_Parenting Skills-EBP-Private Ins (Non-Paid)</fullName>
            </value>
            <value>
                <fullName>11551_Parenting Skills-EBP-Other Fund (Non-Paid)</fullName>
            </value>
            <value>
                <fullName>11552_Parenting Skills Training -EBP-Medicaid (Non-Paid)</fullName>
            </value>
            <value>
                <fullName>11553_Parenting Skills Training-EBP-PrivateIns(Non-Paid)</fullName>
            </value>
            <value>
                <fullName>11554_Parenting Skills Training-EBP-Other Fund(Non-Paid)</fullName>
            </value>
            <value>
                <fullName>11555_Respite Care-EBP-Medicaid (Non-Paid)</fullName>
            </value>
            <value>
                <fullName>11556_Respite Care-EBP-Private Ins (Non-Paid)</fullName>
            </value>
            <value>
                <fullName>11557_Respite Care-EBP-Other Fund (Non-Paid)</fullName>
            </value>
            <value>
                <fullName>11558_Crisis Counseling-EBP-Medicaid (Non-Paid)</fullName>
            </value>
            <value>
                <fullName>11559_Crisis Counseling-EBP-Private Ins (Non-Paid)</fullName>
            </value>
            <value>
                <fullName>11560_Crisis Counseling-EBP-Other Fund (Non-Paid)</fullName>
            </value>
            <value>
                <fullName>11561_DSS Provided Group Work-EBP- Medicaid (Non-Paid)</fullName>
            </value>
            <value>
                <fullName>11562_DSS Provide Group Work-EBP-Private Ins (Non-Paid)</fullName>
            </value>
            <value>
                <fullName>11563_DSS Provide Group Work-EBP-Other Fund (Non-Paid)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>