force-app/main/default/objects/Program__c/fields/Vacancy__c.field-meta.xml
<CustomField>
    <fullName>Vacancy__c</fullName>
    <label>Vacancy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>